# hermes-all-in-one

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  VERSION  docker-compose.yml  policy.example.yaml  pyproject.toml  railway.toml  requirements-dev.txt  server.py  start.sh  survey-oauth-pkce.md  token-schema.md
api/: agent_sessions.py  config.py  routes.py  session_events.py  streaming.py
control_plane/: auth.py  config.py  gateway_manager.py  proxy.py  runtime_mode.py  s6_ops.py  server.py  webui_manager.py  webui_proxy.py
data/: oauth-default-providers.yaml
docs/: architecture.md  credential-lifecycle.md  mcp-integration.md  migration-0.6-to-0.7.md  native-windows-support-plan.md  operator-guide.md  review-report-v0.6.0.md  roadmap-v0.18.0.md  windows.md
scripts/: bump-hermes.sh  bump-patch.sh  deploy-hermesvault-site.sh  latest-hermes-tag.sh  patch-codex-null-guard.py  patch-vendor-models.py  read-version.sh  set-version.sh  smoke.sh  sync-upstreams.sh  version-lib.sh
static/: boot.js  commands.js  i18n.js  index.html  panels.js  sessions.js  style.css  ui.js  workspace.js
templates/: hermes-data.env.example
tests/: _pytest_port.py  conftest.py  test_1620_paste_text_with_image.py  test_4170_offline_probe.py  test_approval_sse.py  test_audit_integrity_core.py  test_audit_surfaces.py  test_auto_compression_card.py  test_compression_snapshot_runtime_clear.py  test_config.py  test_control_plane.py  test_credential_pool_profile_scoping.py  test_css_tooltips.py  test_custom_provider_prefix_collisions.py  test_dashboard.py  test_dpapi_pywin32_contract.py  test_gateway_watcher_profile.py  test_insights.py  test_issue1611_session_profile_filtering.py  test_issue2124_outline_panel.py  (+47 more)
(+61 files in other folders)
